--- a/assets/stylesheets/shared/_global.scss
+++ b/assets/stylesheets/shared/_global.scss
@@ -60,7 +60,7 @@ button:not([type="button"]) {
 
 	display: inline-block;
 	min-height: 36px;
-	padding: 9px 50px 10px;
+	padding: 9px 50px;
 	border: 1px solid $buttonBlue;
 	border-radius: 6px;
 
